--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.0.1",
     "chart.js": "^4.3.0",
+    "faker": "^5.5.3",
     "framer-motion": "^10.12.12",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -24,6 +26,7 @@
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
