--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "chart.js": "^4.3.0",
     "faker": "^5.5.3",
     "framer-motion": "^10.12.12",
@@ -24,6 +25,7 @@
     "react-icons": "^4.8.0",
     "react-icons-all": "^4.5.1",
     "react-player": "^2.12.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
