--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.0.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "faker": "^5.5.3",
     "framer-motion": "^10.12.12",
