--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-icons-all": "^4.5.1",
     "react-player": "^2.12.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "sweetalert2": "^11.7.16"
   },
   "devDependencies": {
     "@types/faker": "^5.5.1",
